--- a/popup/ignore_menu.html
+++ b/popup/ignore_menu.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="ignore_menu.css"/>
-    <script>console.warn("Im working")</script>
-    <script src="ignore_menu.js"></script>
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="ignore_menu.css" />
+  <script src="ignore_menu.js"></script>
+</head>
 
 <body>
   <div id="popup-content">
@@ -22,9 +22,14 @@
     <input type="text" id="inp-field-remove">
     <button id="btn-reset" onclick="removeUser()">Jag förlåter dig.</button>
   </div>
-</div>
+  </div>
 
-<div>Tystade personer: <span id="span-ignoreList"></span></div>
+  <div>Tystade personer: <span id="span-ignoreList"></span></div>
+
+  <div class="command-container">
+    <button id="btn-unmute">Återställ</button>
+    <button id="btn-mute">Dölj användare</button>
+  </div>
 
   <div id="error-content" class="hidden">
     <p>Nått gick fel. Skyll inte på mig, jag gör det här gratis.</p>
