Fixed issue where removed people weren't stored in localstorage

--- a/popup/ignore_menu.html
+++ b/popup/ignore_menu.html
@@ -3,37 +3,37 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="ignore_menu.css" />
-  <script src="ignore_menu.js"></script>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="ignore_menu.css" />
+    <script src="ignore_menu.js"></script>
 </head>
 
 <body>
-  <div id="popup-content">
-    <div class="inp-container">
-      <p>Skriv in jobbig person: </p>
-      <input type="text" id="inp-field-add">
-      <button id="btn-stfu" onclick="addUser()">Bort!</button>
+    <div id="popup-content">
+        <div class="inp-container">
+            <p>Skriv in jobbig person: </p>
+            <input type="text" id="inp-field-add">
+            <button id="btn-stfu" onclick="addUser()">Bort!</button>
+        </div>
+
+        <div class="inp-container">
+            <p>Frälsa användare: </p>
+            <input type="text" id="inp-field-remove">
+            <button id="btn-reset" onclick="removeUser()">Jag förlåter dig.</button>
+        </div>
+
+        <div>Tystade personer: <span id="span-ignoreList"></span></div>
+
+        <div class="command-container">
+            <button id="btn-unmute">Visa alla kommentarer</button>
+            <button id="btn-mute">Dölj jobbiga jävlar</button>
+        </div>
+
     </div>
 
-    <div class="inp-container">
-      <p>Frälsa användare: </p>
-      <input type="text" id="inp-field-remove">
-      <button id="btn-reset" onclick="removeUser()">Jag förlåter dig.</button>
+    <div id="error-content" class="hidden">
+        <p>Nått gick fel. Skyll inte på mig, jag gör det här gratis.</p>
     </div>
-
-    <div>Tystade personer: <span id="span-ignoreList"></span></div>
-
-    <div class="command-container">
-      <button id="btn-unmute">Återställ</button>
-      <button id="btn-mute">Dölj användare</button>
-    </div>
-
-  </div>
-
-  <div id="error-content" class="hidden">
-    <p>Nått gick fel. Skyll inte på mig, jag gör det här gratis.</p>
-  </div>
 </body>
 
 </html>
